--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -14,7 +14,7 @@
 // }
 
 .App-header {
-    background-color: black;
+    background-color: #121212;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -22,10 +22,6 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-}
-
-.App-link {
-    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -50,4 +46,7 @@ a:active {
     text-decoration: none;
     color: white;
     cursor: pointer;
+}
+.App-link {
+    color: #61dafb;
 }
