--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -50,3 +50,33 @@ a:active {
 .App-link {
     color: #61dafb;
 }
+.footer {
+    padding: 4em 3em 2em;
+    text-align: center;
+    background-color: #3a3a3a;
+}
+.icons {
+    cursor: default;
+    list-style: none;
+    padding-left: 0;
+}
+.copyright {
+    color: #ffffff80;
+    font-size: 0.8em;
+    letter-spacing: 0.225em;
+    list-style: none;
+    padding: 0;
+    text-transform: uppercase;
+}
+.copyright li:first-child {
+    border-left: 0;
+    margin-left: 0;
+    padding-left: 0;
+}
+.copyright li {
+    border-left: 1px solid #ffffff80;
+    display: inline-block;
+    line-height: 1em;
+    margin-left: 1em;
+    padding-left: 1em;
+}
