--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -35,9 +35,6 @@
 .navbar-logo {
     height: 5vmin;
 }
-.navbar-buttons {
-    padding: 0.5rem;
-}
 
 a,
 a:visited,
@@ -46,6 +43,15 @@ a:active {
     text-decoration: none;
     color: white;
     cursor: pointer;
+}
+.navbar-buttons {
+    padding: 0.5rem;
+}
+.navbar-buttons :hover {
+    border-bottom: solid 3px #fcee3d;
+}
+.navbar-buttons a {
+    color: black;
 }
 .App-link {
     color: #61dafb;
