--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -14,8 +14,8 @@
 // }
 
 .App-header {
-    background-color: #121212;
-    min-height: 100vh;
+    background-color: #171717;
+    min-height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,6 +47,15 @@ a:active {
     color: white;
     cursor: pointer;
 }
+.navbar-buttons {
+    padding: 0.5rem;
+}
+.navbar-buttons :hover {
+    border-bottom: solid 3px #fcee3d;
+}
+//.navbar-buttons a {
+//    color: black;
+//}
 .App-link {
     color: #61dafb;
 }
