--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -15,6 +15,7 @@
 
 .App-header {
     background-color: #171717;
+    background-image: url(./assets/images/cartographer.png);
     min-height: 90vh;
     display: flex;
     flex-direction: column;
