--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -1,3 +1,15 @@
+$breakpoints: (
+    phone: 640px,
+    tablet: 768px,
+    desktop: 1024px,
+) !default;
+
+// @include media(">phone", "<tablet") {
+// }
+
+// @include media(">tablet", "<950px") {
+// }
+
 .App {
     text-align: center;
 }
@@ -126,4 +138,55 @@ a:active {
     background-color: #fcee3d;
     color: white;
     transform: rotateY(180deg);
+}
+
+.presentation-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    justify-content: space-around;
+    background-color: #ececec;
+    padding: 1rem;
+    @media (min-width: 0px) and (max-width: 640px) {
+        display: flex;
+        flex-direction: column-reverse;
+        flex-wrap: nowrap;
+    }
+}
+.presentation-image-card {
+    width: 40vw;
+    height: 80vh;
+    padding: 1rem;
+    position: relative;
+}
+.presentation-back-image {
+    height: 80%;
+    width: 80%;
+    background-color: #121212;
+    position: absolute;
+    @media (min-width: 0px) and (max-width: 640px) {
+        width: 80vw;
+    }
+}
+.presentation-image {
+    height: 80%;
+    width: 80%;
+    position: absolute;
+    top: 17%;
+    left: 20%;
+    @media (min-width: 0px) and (max-width: 640px) {
+        width: 80vw;
+    }
+}
+
+.presentation-text {
+    width: 40vw;
+    height: 80vh;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    @media (min-width: 0px) and (max-width: 640px) {
+        width: 80vw;
+    }
 }
